<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:padding="16dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
         android:id="@+id/website_edit_text"
        android:text="@string/edit_website"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/open_website_button"
          android:layout_marginBottom="24dp"
          android:text="@string/button_website" />
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:minHeight="48dp"
           android:id="@+id/location_edit_text"
           android:text="@string/edit_location"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/location_button"
           android:layout_marginBottom="24dp"
           android:text="@string/button_location" />
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:minHeight="48dp"
           android:id="@+id/share_edit_text"
           android:text="@string/edit_share"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/share_text_button"
           android:layout_marginBottom="24dp"
           android:text="@string/button_share"/>

       <EditText
           android:layout_width="371dp"
           android:layout_height="48dp"
           android:minHeight="48dp"
           android:background="@drawable/rounded_edittext"
           android:id="@+id/implicit_edit_text"
           android:hint="Masukkan data implicit"/>


       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/implicit_button"
           android:layout_marginBottom="24dp"
           android:text="Implicit"/>

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>